feat: improve null-safety
 Conflicts:
	carapace-server/src/main/java/org/carapaceproxy/core/ProxyRequestsManager.java
	carapace-server/src/main/java/org/carapaceproxy/core/RuntimeServerConfiguration.java

 Conflicts:
	carapace-server/src/main/java/org/carapaceproxy/core/ProxyRequestsManager.java
	carapace-server/src/main/java/org/carapaceproxy/core/RuntimeServerConfiguration.java